--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^2.3.0",
+    "multer": "^2.4.0",
     "fluent-ffmpeg": "^2.1.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
-
