--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^2.4.0",
+    "multer": "^1.4.5-lts.1",
     "fluent-ffmpeg": "^2.1.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
