--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "shorts-backend",
   "version": "1.0.0",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5"
   }
 }
