--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "shorts-backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -12,4 +13,3 @@
     "cors": "^2.8.5"
   }
 }
-
